overflow fix

--- a/assets/css/index.css
+++ b/assets/css/index.css
@@ -13,6 +13,7 @@ body {
   padding: 4px;
   display: grid;
   grid-template-rows: 50px 1fr 30px;
+  overflow: hidden;
 }
 #main {
   height: 100%;
